Chapter 11/16-netpol2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol2
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
  - ports:
    - port: 80
    from:
    - podSelector:
        matchLabels:
          app: box
